--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,33 @@
   ],
   "homepage": "https://github.com/zero-to-prod/validate-url",
   "license": "MIT",
+  "readme": "./README.md",
   "authors": [
     {
       "name": "David Smith",
-      "email": "dave0016@gmail.com"
+      "email": "dave0016@gmail.com",
+      "homepage": "https://davidsmith.blog/",
+      "role": "maintainer"
     }
   ],
+  "funding": [
+    {
+      "type": "GitHub",
+      "url": "https://github.com/sponsors/zero-to-prod"
+    }
+  ],
+  "scripts": {
+    "test-all": [
+      "sh test.sh"
+    ],
+    "docker": [
+      "docker compose run --rm "
+    ]
+  },
+  "scripts-descriptions": {
+    "test-all": "tests all php versions",
+    "docker": "runs a docker container"
+  },
   "require": {
     "php": ">=7.1"
   },
