--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php71:/app/vendor
 
   php71debug:
     build:
@@ -13,6 +14,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php71:/usr/local/etc/php
+      - ./vendor-php71:/app/vendor
 
   php71composer:
     build:
@@ -20,6 +22,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php71:/app/vendor
 
   php72:
     build:
@@ -27,6 +30,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php72:/app/vendor
 
   php72debug:
     build:
@@ -35,6 +39,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php72:/usr/local/etc/php
+      - ./vendor-php72:/app/vendor
 
   php72composer:
     build:
@@ -42,6 +47,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php72:/app/vendor
 
   php73:
     build:
@@ -49,6 +55,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php73:/app/vendor
 
   php73debug:
     build:
@@ -57,6 +64,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php73:/usr/local/etc/php
+      - ./vendor-php73:/app/vendor
 
   php73composer:
     build:
@@ -64,6 +72,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php73:/app/vendor
 
   php74:
     build:
@@ -71,6 +80,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php74:/app/vendor
 
   php74debug:
     build:
@@ -79,6 +89,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php74:/usr/local/etc/php
+      - ./vendor-php74:/app/vendor
 
   php74composer:
     build:
@@ -86,6 +97,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php74:/app/vendor
 
   php80:
     build:
@@ -93,6 +105,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php80:/app/vendor
 
   php80debug:
     build:
@@ -101,6 +114,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php80:/usr/local/etc/php
+      - ./vendor-php80:/app/vendor
 
   php80composer:
     build:
@@ -108,6 +122,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php80:/app/vendor
 
   php81:
     build:
@@ -115,6 +130,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php81:/app/vendor
 
   php81debug:
     build:
@@ -123,6 +139,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php81:/usr/local/etc/php
+      - ./vendor-php81:/app/vendor
 
   php81composer:
     build:
@@ -130,6 +147,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php81:/app/vendor
 
   php82:
     build:
@@ -137,6 +155,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php82:/app/vendor
 
   php82debug:
     build:
@@ -145,6 +164,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php82:/usr/local/etc/php
+      - ./vendor-php82:/app/vendor
 
   php82composer:
     build:
@@ -152,6 +172,7 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php82:/app/vendor
 
   php83:
     build:
@@ -159,6 +180,7 @@ services:
       target: base
     volumes:
       - ./:/app
+      - ./vendor-php83:/app/vendor
 
   php83debug:
     build:
@@ -167,6 +189,7 @@ services:
     volumes:
       - ./:/app
       - ./docker/php82:/usr/local/etc/php
+      - ./vendor-php83:/app/vendor
 
   php83composer:
     build:
@@ -174,6 +197,32 @@ services:
       target: composer
     volumes:
       - ./:/app
+      - ./vendor-php83:/app/vendor
+
+  php84:
+    build:
+      context: docker/php84
+      target: base
+    volumes:
+      - ./:/app
+      - ./vendor-php84:/app/vendor
+
+  php84debug:
+    build:
+      context: docker/php84
+      target: debug
+    volumes:
+      - ./:/app
+      - ./docker/php82:/usr/local/etc/php
+      - ./vendor-php84:/app/vendor
+
+  php84composer:
+    build:
+      context: docker/php84
+      target: composer
+    volumes:
+      - ./:/app
+      - ./vendor-php84:/app/vendor
 
 networks:
   default:
